# ruins_of_dunscaith

./: .gitignore  Cargo.toml  Dockerfile  README.md  audit_charinfo  audit_charinfo.rs  check_crc.py  check_crc.rs  check_crc2.py  config.toml  crc_test.rs  debug_server.py  debug_server_v2.py  debug_server_v3.py  docker-compose.yml  full_integration_test.py  inspect_membership  inspect_membership.cpp  integration_test.py  mock_5999.py  mock_login.py  run.sh  setup_db.sh  start_servers.sh  test_runner.sh  test_runner2.sh  test_runner_phase5.sh  udp_listener.py  verification_client.py
.agents/workflows/: eqemu_claw_guide.md
.sqlx/: query-1a81794620597eea4bdbf37414406179aa1a25f11ae747b5edf71c0c0afdc9b1.json  query-2c355207eae0e002f5342505371adef7e00819d3f308dbe520922ae530df602e.json  query-3d6ff8d3c956088ca559cec5cf43b38a1824b2c0481bf93936068575774adb1d.json  query-476fa4bae79e6961d3192f6e15766e4d42209eacc30808a40994ff0e9ef45486.json  query-4e99ba9d74c2014fff3d65129f9fe041936cb906c9927368f51143319aa186ee.json  query-535bf0ee51a24aea9508fcedce4a7606bc9e57b091a42a2f9ef3942c2f3beb16.json  query-6bcd6c614ee91b8af6a442d4f6ee00a0c715fcb2606e4feb5f10eab3ab8af8f8.json  query-783b5d5f005958c3b6bddd24b30c018764e5ebb0a23ccd86760763386c011e6b.json  query-b489f644da3e39d48877f84f3babc3c55289305dbc1726751d85f76d48b46e93.json  query-b7be04ccf39a8b0718c688a134acd02e41280114d665179c6341fb5ddd076fbc.json  query-ce79d48bf0420c164835068d40e1449f81d9f51f646711d26f1f6a2fe043efb0.json  query-d04579748254011fdd7ce85d96b159ea5f2ea7a9649bf4ed56bdfd91458b1fce.json  query-d17b4b83f8fb03df3a555b469d5c74e7dcdf7f70fa91ba7503a60b7c6a2ca007.json
.zeroclaw/: config.toml
akk-stack-legacy/: Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
crates/akk-rust/: Cargo.toml
crates/akk-rust/src/: docker.rs  env.rs  main.rs  purge.rs  setup.rs  system.rs
crates/login-server/: Cargo.toml
crates/login-server/src/: main.rs
crates/login-server/src/net/: client_socket.rs  client_state.rs  discovery.rs  eqstream.rs  eqstream_old.rs  login_manager.rs  login_session.rs  mod.rs  packet.rs
crates/memory/: brain.db
crates/shared/: Cargo.toml  audit_results.md
crates/shared/src/: crypto.rs  db.rs  lib.rs  login_packets.rs  opcodes.rs  packets.rs
crates/shared/src/game/: char_profile.rs  mod.rs
crates/shared/src/net/: eq_stream.rs
crates/state/: memory_hygiene_state.json
crates/world-server/: Cargo.toml
crates/world-server/src/: main.rs  packets.rs
crates/world-server/src/actors/: mod.rs  session.rs  system.rs
crates/world-server/src/db/: mod.rs
crates/world-server/src/net/: socket.rs
crates/zone-server/: Cargo.toml
crates/zone-server/src/: main.rs
crates/zone-server/src/game/: inventory.rs  loot.rs  merchant.rs  mod.rs  spells.rs  world.rs
crates/zone-server/src/net/: client_socket.rs  connection.rs  key_manager.rs  mod.rs  packet.rs  session.rs
scripts/: analyze_eq_trace.py  benchmark_handshake.py  capture_zone_handoff.py  listen_9001.py  login_autofuzzer.py  login_fuzzer.py  mysql_to_postgres.py  tcp_doctor.py  tcp_doctor_v2.py  test_login_handshake.py  test_session_handshake.py  test_zone_entry.py  test_zone_handoff.py  verify_login.py
src/: main.rs
src/database/: connection.rs  models.rs
src/game/: mod.rs  opcodes.rs  packet.rs
src/handlers/: login.rs  mod.rs  (+2 more)
(+19 files in other folders)
