[package]
name = "login-server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
tokio = { version = "1.36", features = ["full"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "mysql", "postgres", "macros", "chrono"] }
num-traits = "0.2"
dotenv = "0.15"
binrw = "0.13"
rand = "0.8"
uuid = { version = "1.10", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.11"
bytes = "1.5"
thiserror = "2.0.18"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
byteorder = "1.5"
nom = "7.1"
crc = "3.0"
des = "0.8"
cbc = "0.1"
cipher = "0.4"
