[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "mysql", "postgres", "macros", "chrono"] }
binrw = "0.13"
log = "0.4"
bytes = "1.5"
nom = "7.1"
crc = "3.2"
tracing = "0.1"
flate2 = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
argon2 = { version = "0.5.3", features = ["std", "password-hash"] }
rand_core = { version = "0.6", features = ["std"] }
num-traits = "0.2"
num-derive = "0.4"
anyhow = "1.0"
