[package]
name = "world-server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
tokio = { version = "1.36", features = ["full"] }
log = "0.4"
env_logger = "0.11"
binrw = "0.13"
bytes = "1.5"
flate2 = "1.0"
dotenv = "0.15"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "mysql", "postgres", "macros", "chrono"] }
bitflags = "2.4"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
